--- a/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
+++ b/logica-js-projeto_inicial/logica-js-projeto_inicial/index.html
@@ -25,7 +25,8 @@
             </div>
         </div>
     </div>
-    <script src="app.js" defer></script>
+    <!--<script src="app.js" defer></script>-->
+    <script src="desafio2.js" defer></script>
 </body>
 
 </html>
