--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
+                <a class="apresentacao__links__navegacao" href="https://github.com/nandacruz">
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/rafaellaballerini">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fernandademc">
                     <img src="./assets/linkedin.png">
                     linkedin
                 </a>
@@ -42,7 +42,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Alura.</p>
