--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fernandademc">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/fernandadmc">
                     <img src="./assets/linkedin.png">
                     linkedin
                 </a>
@@ -42,7 +42,7 @@
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Alura.</p>
